// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`markdown-table-transformer > formatResponseForDiscord > should handle complex table with all features 1`] = `
"# Product Inventory

Below is our **inventory status**:

\`\`\`
| Product           | Price  | Alignment | Notes       |
| ----------------- | ------ | :-------: | ----------- |
| Python Hat        | $23.99 |   Left    | _In stock_  |
| SQL Hat           | $23.99 |  Center   | [View](url) |
| Codecademy Hoodie | $42.99 |   Right   | \`SALE\`      |
\`\`\`

Contact us for more info."
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle multiple tables in same document 1`] = `
"Here is the first table:

\`\`\`
| Name  | Age |
| ----- | --- |
| Alice | 30  |
| Bob   | 25  |
\`\`\`

And the second table:

\`\`\`
| City   | Country |
| ------ | ------- |
| NYC    | USA     |
| London | UK      |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle table with empty cells 1`] = `
"\`\`\`
| Name  | Age | City |
| ----- | --- | ---- |
| Alice | 30  |      |
|       | 25  | NYC  |
| Bob   |     | LA   |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle table with pipe escaped in cells 1`] = `
"\`\`\`
| Command      | Description        |
| ------------ | ------------------ |
| \`&#124;\`     | Escaped pipe       |
| \`a &#124; b\` | Pipe in expression |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle table with text before and after 1`] = `
"## Monthly Report

Check out this data:

\`\`\`
| Month    | Savings |
| -------- | ------- |
| January  | $250    |
| February | $80     |
| March    | $420    |
\`\`\`

Total savings are looking good!"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle tables with text alignment (left, center, right) 1`] = `
"\`\`\`
| Left  | Center | Right |
| :---- | :----: | ----: |
| Alice |   30   |   NYC |
| Bob   |   25   |    LA |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle tables with text formatting in cells 1`] = `
"\`\`\`
| Feature                     | Status  | Code    |
| --------------------------- | ------- | ------- |
| **Bold**                    | Active  | \`true\`  |
| _Italic_                    | Pending | \`false\` |
| [Link](https://example.com) | Done    | \`const\` |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should handle tables with varying column widths 1`] = `
"\`\`\`
| Short | Very Long Header |
| ----- | ---------------- |
| A     | B                |
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should normalize inline opening fences with info strings 1`] = `
"I found the duplicate entry. Let me fix that.

\`\`\`text
Summary
Calories 1500
Protein 105g
\`\`\`

Looks good now."
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should normalize misplaced code fences at end of text lines 1`] = `
"Wait, let me fix the calories — 220 + 200 + 104 = 524, not 450.

\`\`\`
Day         1 May 2026
Breakfast   381 kcal   Lebanese bread + 2 cheddar
Lunch       524 kcal   Glass noodle spinach salad + 2 eggs + tuna 90g
---------------------------------------
Intake      905 kcal
Burn        0 kcal
Net         905 kcal
Deficit     1,095 kcal
\`\`\`

\`\`\`
Protein     ~50g ✅   Eggs + tuna covered the missing eggs from breakfast
Iron        ~5mg      No red meat today but eggs + spinach help
Omega-3     ✅        Tuna
\`\`\`

Smart move — eggs came back at lunch to make up for the missing breakfast protein. 1,095 kcal deficit with plenty of evening left. Any pickleball plans today?"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should not break when code fence has trailing prose text 1`] = `
"Here is the diagram you asked for:

\`\`\`
Flow Chart
═══════════════════════════════════════
User → Auth Service → Database
  ↓         ↓
Cache    Logging
\`\`\`

That's the basic architecture. The caching layer sits alongside auth.

Let me know if you want more detail."
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should not split fences with unusual but valid info strings 1`] = `
"\`\`\`c++
int x = 1;
\`\`\`

\`\`\`c#
var y = 2;
\`\`\`

\`\`\`diff:ts
+ added
- removed
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should not split valid code fence info strings 1`] = `
"Here is some code:

\`\`\`typescript
const x = 1;
\`\`\`

That was TypeScript."
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should not split when info string has trailing whitespace 1`] = `
"\`\`\`java
System.out.println();
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should return text unchanged if no tables 1`] = `"No tables here, just text."`;

exports[`markdown-table-transformer > formatResponseForDiscord > should split fence with multi-word prose after it 1`] = `
"\`\`\`
this is prose
and more content
\`\`\`"
`;

exports[`markdown-table-transformer > formatResponseForDiscord > should wrap and format a basic table 1`] = `
"\`\`\`
| Name  | Age | City |
| ----- | --- | ---- |
| Alice | 30  | NYC  |
| Bob   | 25  | LA   |
\`\`\`"
`;
